.golden/3420956872570442319/golden

INITIALPATH:7:20: error:
    • INITIALPATH:7:28:
  |
7 | main = putStrLn [f|{hello:,s}|]
  |                            ^
String type is incompatible with grouping (_ or ,).

    • In the quasi-quotation: [f|{hello:,s}|]
  |
7 | main = putStrLn [f|{hello:,s}|]
  |                    ^^^^^^^^^^^^
